tests/regression/errors/basic/undefined_var_13.csd
// Undefined variable test 13
vibez.spill("Using undefined:", undefined_var_13)
sus result drip = missing_variable + 13
